# bracketguard

./: .gitignore  pyproject.toml
bracketguard/: __init__.py  checker.py  cli.py  stack.py
samples/: sample-1.txt  sample-10.txt  sample-2.txt  sample-6.txt  sample-7.txt  sample-8.txt  sample-9.txt
